feat: add basic i18n support

--- a/public/html/chooseLobby.html
+++ b/public/html/chooseLobby.html
@@ -80,10 +80,10 @@
     </section>
 </div>
 <div id="gameOnMain">
-    <h2>Game On!</h2>
+    <h2 data-i18n="choose.title">Game On!</h2>
     <div id="lobbyButtons">
-        <button class="button lobby" id="create">CREATE</button>
-        <button class="button lobby" id="join">JOIN</button>
+        <button class="button lobby" id="create" data-i18n="choose.create">CREATE</button>
+        <button class="button lobby" id="join" data-i18n="choose.join">JOIN</button>
 
     </div>
 </div>
