--- a/public/html/startSite.html
+++ b/public/html/startSite.html
@@ -115,9 +115,9 @@
 </div>
 <div id="menu">
     <section class="menu">
-        <button id="about">ABOUT</button>
-        <button id="start">START</button>
-        <button id="help">HELP</button>
+        <button id="about" data-i18n="start.about">ABOUT</button>
+        <button id="start" data-i18n="start.start">START</button>
+        <button id="help" data-i18n="start.help">HELP</button>
     </section>
 </div>
 
