Remove language dropdown and CSS

--- a/public/html/joinLobby.html
+++ b/public/html/joinLobby.html
@@ -26,7 +26,7 @@
         <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="code" required>
 
-        <button class="joinForm" id="joinGame" type="submit" data-i18n="join.join">JOIN</button>
+        <button class="joinForm" id="joinGame" type="submit">JOIN</button>
     </form>
 </main>
 
