--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -63,9 +63,20 @@
     <h3 id="timer">30s</h3>
 </div>
 <div id="player-avatars1"><div id="player-avatars2"></div></div>
-<div id="own-avatar"><button id="changeAvatar">
-    <i class="fas fa-rotate"></i>
-    </button></div>
+<div id="own-avatar" class="avatar">
+    <div class="cardHands">
+        <div class="avatar-row">
+            <h2 class="cardsleft"></h2>
+        </div>
+        <div class="avatar-row">
+            <span class="card small back"><span><span></span></span></span>
+            <span class="card small back"><span><span></span></span></span>
+        </div>
+    </div>
+    <button id="changeAvatar">
+        <i class="fas fa-rotate"></i>
+    </button>
+</div>
 <div id="player-hand-container"></div>
 <div id="yourTurn">
     Your turn in:
