Add documentation comments and update config

--- a/public/html/aboutPage.html
+++ b/public/html/aboutPage.html
@@ -13,6 +13,7 @@
 </head>
 <body id="about">
 
+<!-- Header with title -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
@@ -20,6 +21,7 @@
     </section>
 </div>
 
+<!-- Main content -->
 <div id="main">
         <div id="aboutText">
             <h2 id="aboutText-header1">About the Game</h2>
