--- a/public/html/chooseLobby.html
+++ b/public/html/chooseLobby.html
@@ -19,6 +19,7 @@
 <button id="eichberg2"></button>
 
 
+<!-- Intro dialogs overlay -->
 <div id="milch-glas-layer">
 
     <dialog open="open" class="chooseLobby" id="eichberg">
@@ -73,12 +74,14 @@
 
 </div>
 
+<!-- Header with title -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Buttons to create or join -->
 <div id="gameOnMain">
     <h2>Game On!</h2>
     <div id="lobbyButtons">
