--- a/public/html/createGame.html
+++ b/public/html/createGame.html
@@ -15,6 +15,7 @@
 
 <button class="button backButtonTop"  id="createBackBtn">BACK</button>
 
+<!-- Intro dialogs overlay -->
 <div id="milch-glas-layer">
 
     <dialog open="open" class="createGame" id="eichberg">
@@ -134,12 +135,14 @@
     </div>
 </div>
 
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Main settings form -->
 <div id="mainWrapper">
     <h2>Settings</h2>
     <div id="start-settings">
