--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -13,6 +13,7 @@
 <body id="gameplay">
 
 <button id="UYES">UYES</button>
+<!-- overlay shown after game end -->
 <div id="milchglas2" class="hidden"></div>
 <div id="winner" class="hidden"><div class="player-name"></div></div>
 <div id="ending-buttons" class="hidden" style="display:none;">
@@ -21,12 +22,14 @@
     <button id="backHome" class="ending">Back To Home</button>
 </div>
 <div id="wait-for-host" class="hidden">Wait for the host...</div>
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Help dialog -->
 <div id="helpButtonClicked">
     <button id="closeHelpBtn" >Help</button>
     <button id="RulesBtn" >Rules</button>
@@ -39,6 +42,7 @@
     <i class="fas fa-rotate-right"></i>
 </div>
 
+<!-- Leave confirmation dialog -->
 <div id="submitLeaving" >
     <h2>Are You Sure?</h2>
     <div>
@@ -49,6 +53,7 @@
 </div>
 
 <button  id="helpBtnLobby" class="button backButtonTop" >HELP</button>
+<!-- Card piles -->
 <div id="piles">
     <div class="pile" id="draw-pile">
         <h2>Draw:</h2>
