--- a/public/html/helpPage.html
+++ b/public/html/helpPage.html
@@ -13,12 +13,14 @@
 </head>
 <body id="help-page-body" class="help-page-body">
 
+<!-- Header with title -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Collapsible help sections -->
 <div class="help-rules-container">
     <details class="help-collapsible-section">
         <summary class="help-section-header">UYES! Rules</summary>
