--- a/public/html/joinLobby.html
+++ b/public/html/joinLobby.html
@@ -10,6 +10,7 @@
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="joinLobby">
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -18,6 +19,7 @@
 </div>
 <button class="button backButtonTop" id="joinBackBtn" >BACK</button>
 
+<!-- Join lobby form -->
 <main class="joinLobby">
     <form method="POST" action="/api/joinGame">
         <label for="NameInput"></label>
