--- a/public/html/lobby.html
+++ b/public/html/lobby.html
@@ -12,6 +12,7 @@
 
 </head>
 <body id="lobbyHost">
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -19,6 +20,7 @@
     </section>
 </div>
 
+<!-- Help dialog -->
 <div id="helpButtonClicked">
     <button id="closeHelpBtn" >Help</button>
     <button id="RulesBtn" >Rules</button>
@@ -27,6 +29,7 @@
 
 </div>
 
+<!-- Leave confirmation dialog -->
 <div id="submitLeaving" >
     <h2>Are You Sure?</h2>
     <div>
@@ -41,6 +44,7 @@
 
 
 
+<!-- Lobby content -->
 <div id="main" class="lobby">
     <div class="gameCode">
         <h2 id="game-code"></h2>
@@ -52,6 +56,7 @@
     </div>
 </div>
 
+<!-- Start game button area -->
 <div id="menu">
     <button id="startGameplay" class="notFull">Start Game</button>
 </div>
