--- a/public/html/rulesPage.html
+++ b/public/html/rulesPage.html
@@ -65,6 +65,7 @@
         <li>The first player who discards all their cards wins the round.</li>
     </ul>
 </div>
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
