--- a/public/html/startSite.html
+++ b/public/html/startSite.html
@@ -11,6 +11,7 @@
 
 </head>
 <body id="startsite">
+<!-- Intro dialogs overlay -->
 <div id="milch-glas-layer">
 
     <dialog open="open" class="startsite" id="eichberg">
@@ -102,6 +103,7 @@
 
 </div>
 
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -109,10 +111,12 @@
     </section>
 </div>
 
+<!-- Main content area -->
 <div id="main">
     <div id="group">
     </div>
 </div>
+<!-- Navigation menu -->
 <div id="menu">
     <section class="menu">
         <button id="about">ABOUT</button>
