--- a/public/html/changeSettings.html
+++ b/public/html/changeSettings.html
@@ -10,12 +10,14 @@
 </head>
 <body id="changeSettings">
 <button class="button backButtonTop" id="createBackBtn">BACK</button>
+<!-- Header with title -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Settings form -->
 <div id="mainWrapper">
     <h2>Settings</h2>
     <div id="start-settings">
