Add extensive documentation and remove unused dependency

--- a/public/html/aboutPage.html
+++ b/public/html/aboutPage.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 
 
 </head>
 <body id="about">
 
+<!-- Page header -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
@@ -20,6 +22,7 @@
     </section>
 </div>
 
+<!-- Main content -->
 <div id="main">
         <div id="aboutText">
             <h2 id="aboutText-header1">About the Game</h2>
@@ -40,6 +43,7 @@
         </div>
 </div>
 
+<!-- Navigation buttons -->
 <div id="menu">
     <section class="menu">
         <button id="back-to-main-menu">BACK</button>
