--- a/public/html/changeSettings.html
+++ b/public/html/changeSettings.html
@@ -6,16 +6,19 @@
     <title>Change Settings</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="changeSettings">
 <button class="button backButtonTop" id="createBackBtn">BACK</button>
+<!-- Page header -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Settings form -->
 <div id="mainWrapper">
     <h2>Settings</h2>
     <div id="start-settings">
