--- a/public/html/chooseLobby.html
+++ b/public/html/chooseLobby.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 
 
@@ -73,12 +74,14 @@
 
 </div>
 
+<!-- Page header -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<!-- Lobby choice buttons -->
 <div id="gameOnMain">
     <h2>Game On!</h2>
     <div id="lobbyButtons">
