--- a/public/html/helpPage.html
+++ b/public/html/helpPage.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 
 </head>
 <body id="help-page-body" class="help-page-body">
 
+<!-- Page header -->
 <div id="header">
     <section >
         <h1 id="gameTitle">UYES!</h1>
