--- a/public/html/createGame.html
+++ b/public/html/createGame.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 
 
 </head>
 <body id="createGame">
+<!-- Back button / overlay for intro -->
 
 <button class="button backButtonTop"  id="createBackBtn">BACK</button>
 
@@ -134,6 +136,7 @@
     </div>
 </div>
 
+<!-- Page header -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
