--- a/public/html/joinLobby.html
+++ b/public/html/joinLobby.html
@@ -7,9 +7,11 @@
     <title>joinLobby</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="joinLobby">
+<!-- Page header -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -18,6 +20,7 @@
 </div>
 <button class="button backButtonTop" id="joinBackBtn" >BACK</button>
 
+<!-- Main join form -->
 <main class="joinLobby">
     <form method="POST" action="/api/joinGame">
         <label for="NameInput"></label>
