--- a/public/html/rulesPage.html
+++ b/public/html/rulesPage.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="rules-page-body" class="help-page-body">
+<!-- Main rules content -->
 <div class="help-rules-container">
     <h2>UYES! Rulebook</h2>
     <p>
