--- a/public/html/startSite.html
+++ b/public/html/startSite.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <!-- index.js selects the correct page script -->
     <script src="/scripts/index.js" type="module" defer></script>
 
 </head>
 <body id="startsite">
+<!-- Intro dialogs overlay -->
 <div id="milch-glas-layer">
 
     <dialog open="open" class="startsite" id="eichberg">
@@ -102,6 +104,7 @@
 
 </div>
 
+<!-- Page header -->
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -109,10 +112,12 @@
     </section>
 </div>
 
+<!-- Main content -->
 <div id="main">
     <div id="group">
     </div>
 </div>
+<!-- Navigation menu buttons -->
 <div id="menu">
     <section class="menu">
         <button id="about">ABOUT</button>
