Add base redirect and credits plus Safari fixes

--- a/public/html/aboutPage.html
+++ b/public/html/aboutPage.html
@@ -40,6 +40,11 @@
             <p>
                 We are a Group of students learning web developoment through creating this game. Our goal is to create a fun and engaging experience for players while also expanding our skills!
             </p>
+            <h2>Media Credits</h2>
+            <p>
+                Music and sound effects are provided by <a href="https://pixabay.com" target="_blank" rel="noopener">Pixabay</a>.
+                Avatar images, the start page graphics and the Eichberg image also originate from Pixabay.
+            </p>
         </div>
 </div>
 
