Add startSite class to menu and update CSS
Applied the 'startSite' class to the #menu div in startSite.html and added corresponding flexbox styling in startSite.css to center the menu content.

--- a/public/html/startSite.html
+++ b/public/html/startSite.html
@@ -118,7 +118,7 @@
     </div>
 </div>
 <!-- Navigation menu buttons -->
-<div id="menu">
+<div id="menu" class="startSite">
     <section class="menu">
         <button id="about">ABOUT</button>
         <button id="start">START</button>
