--- a/public/html/startSite.html
+++ b/public/html/startSite.html
@@ -113,12 +113,12 @@
 </div>
 
 <!-- Main content -->
-<div id="main">
+<div id="main" class="startSite">
     <div id="group">
     </div>
 </div>
 <!-- Navigation menu buttons -->
-<div id="menu" class="startSite">
+<div id="menu" >
     <section class="menu">
         <button id="about">ABOUT</button>
         <button id="start">START</button>
